Correct copyright from 2021 to 2022 for new files Add autofocus on filter-menu Optimize pagination while filtering Reduce padding for table in business date view Prevent business date view sticky header to overlaps the menu Move the run button in the timestamp view to the top

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
 }
+
+body div.makeStyles-settingsMenu-11 {
+    z-index: 2
+}
